tests/integration/conformance/testdata/networking/gateway/basic/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/gateways
    check:
      - exactlyOne:
        - equals: {
          "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.Gateway",
          "Metadata": {
            "name": "{{.Namespace}}/helloworld-gateway"
          },
          "Body": {
            "selector": {
              "istio": "ingressgateway"
            },
            "servers": [
            {
              "hosts": [
                "*"
              ],
              "port": {
                "name": "http",
                "number": 80,
                "protocol": "HTTP"
              }
            }
            ]
          }
        }
